philo_one done + some fix, again

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
-philo_two
-philo_three
 philo_one/a.out
 philo_one/.*
 philo_one/.obj
 philo_one/philo_one
+# philo_two/a.out
+# philo_two/.*
+# philo_two/.obj
+# philo_two/philo_two
+philo_three
+philo_two
