--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,9 @@ philo_one/a.out
 philo_one/.*
 philo_one/.obj
 philo_one/philo_one
-philo_two/a.out
-philo_two/.*
-philo_two/.obj
-philo_two/philo_two
+philo_two
+# philo_two/a.out
+# philo_two/.*
+# philo_two/.obj
+# philo_two/philo_two
 philo_three
