--- a/.gitignore
+++ b/.gitignore
@@ -6,4 +6,7 @@ philo_two/a.out
 philo_two/.*
 philo_two/.obj
 philo_two/philo_two
-philo_three
+philo_three/a.out
+philo_three/.*
+philo_three/.obj
+philo_three/philo_three
